[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["masfana016 <masfanasrullahansari123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-google-genai = "^2.0.5"
langgraph = "^0.2.52"
langchain-core = "^0.3.19"
langchain-community = "^0.3.7"
fastapi = "^0.115.5"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.9.0.post1"
beautifulsoup4 = "^4.12.3"
uvicorn = {extras = ["standard"], version = "^0.32.1"}

[tool.poetry.scripts]
dev="agent_memory:__name__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
